--- a/svt.ipynb
+++ b/svt.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "source": [
     "**I have done some preprocessing to the Netfilx files(e.g. mapping the users id ranging from [6,2649429] to their actual id number [1-480189]) which takes about an hour just for running the program.  \n",
-    "Then I wrote the rate, rates' row index and rates' col index into the following 'rate.csv', 'row.csv', 'col.csv' files And I directly read from these files to save time and write thme into a sparse matrix M_original.  \n",
+    "Then I wrote the rate, rates' row index and rates' col index into the following 'rate.csv', 'row.csv', 'col.csv' files And I directly read from these files to save time and write them into a sparse matrix M_original.  \n",
     "The rows of M_original are the users' actual id numbers ranging from [1,480189] while the columns are the id of 17770 movies. The data in the matrix is the rates. \n",
     "**"
    ]
